syntax = "proto3";

package protobuf;

message ErrorReply {
    bool status = 1;
    string error = 2;
}

// cmd: plugin list
message PluginListRequest{
    bool installed = 1;
    bool running = 2;
}

message PluginDependency{
    string id = 1;
    string version = 2;
}

message PluginList {
    string id = 1;
    string name = 2;
    string author = 3;
    repeated PluginDependency dependencies = 4;
    bool installed = 5;
    bool running = 6;
}

message PluginListReply{
    repeated PluginList data = 1;
    ErrorReply error = 2;
}

// cmd: plugin get
message PluginGetRequest {
    string uri = 1;
    bool install_dependencies = 2;
}

// cmd: plugin remove
message PluginRemoveRequest {
    string id = 1;
}

// cmd: plugin install
message PluginInstallRequest {
    string id = 1;
}

// cmd: plugin uninstall
message PluginUninstallRequest {
    string id = 1;
}

// cmd: plugin upload
message PluginUploadRequest {
    string name = 1;
    bytes so = 2;
}

// cmd: plugin meta
message PluginMetaRequest {
    string id = 1;
    bool dependencies = 2;
    bool dependencies_status = 3;
}

message PluginMetaReply {
    string json = 1;
}